Modified POM.xml file plugins